@@ -1,2 +1,1 @@
- * Error if HTTP/2 is requested but not offered by the server
- * SSL 2.0 and SSL 3.0 disabled by ```--all``` and ```--all-local```
+ * Remove the trailing . from FQDNs
