@@ -1,3 +1,7 @@
+2021-12-16  Matteo Corti  <matteo@corti.li>
+
+        * check_ssl_cert (parse_command_line_options): Remove the trailing . from FQDNs
+
 2021-12-15  Matteo Corti  <matteo@corti.li>
 
         * check_ssl_cert (fetch_certificate): check if the used protocol was HTTP/2 (if requested)
